2004-09-22  Federico Zenith  <zenith@chemeng.ntnu.no>

	* DLD-FUNCTIONS/qz.cc (Fqz): New @tex section(s) in doc string for
	better formating of printed documentation.  Use @var in doc string.

	* DLD-FUNCTIONS/time.cc (Fstrftime): Fix typo in doc string.
	* error.cc (Flasterr, Flastwarn): Likewise.
	* mappers.cc (Farg, Fasinh, Fatanh, Ffinite, Fsin, Fsinh, Ftan):
	Likewise.
	* file-io.cc (Fmktemp): Likewise.
	* pt-plot.cc (symbols_of_pt_plot): Fix typos in doc string for
	gnuplot_has_frames.

	* input.cc (symbols_of_input): Replace --echo-input with new
	--echo-commands in PS4 doc string.

	* pt-assign.cc (symbols_of_pt_assign): Mark print_rhs_assign_val
	as built-in in doc string.

	* symtab.cc (symbols_of_symtab): Mark variables_can_hide_functions
	as built-in in doc string.

2004-09-21  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.59.

	* oct-fstrm.h (octave_fstream::octave_fstream,
	octave_fstream::create): Set default float format to actual native
	format, not flt_fmt_native.
	* oct-iostrm.h (octave_base_iostream::octave_base_iostream,
	octave_istream::octave_istream, octave_ostream::octave_ostream):
	Likewise.
	* oct-prcstrm.h (octave_iprocstream::octave_iprocstream,
	octave_oprocstream::octave_oprocstream,
	octave_iprocstream::create, octave_oprocstream::create):
	Likewise.
	* oct-stdstrm.h (octave_stdiostream::octave_stdiostream,
	octave_stdiostream::create):
	Likewise.
	* oct-stream.h (octave_base_stream::octave_base_stream):
	Likewise.
	* oct-strstrm.h (octave_base_strstream::octave_base_strstream,
	octave_istrstream::octave_istrstream, octave_istrstream::create):
	Likewise.

2004-09-21  David Bateman  <dbateman@free.fr>

	* data.cc (Freshape): Allow a single empty dimension argument
	to flag unknown dimension and calculate its value from the
	other dimensions.

2004-09-21  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_record::~symbol_record): Delete definition if
	count goes to zero.